kubernetes/freaks-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freaks-ingress
  namespace: freaks
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: freaks.nl
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: freaksfrontend
            port: 
              number: 4200
  - host: api.freaks.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: freaksgateway
            port: 
              number: 6011
  - host: authservice.freaks.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authservice
            port: 
              number: 6001
